<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".view.ClientePessoaJuridicaActivity">

  <TextView
    android:id="@+id/txtAppName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:text="@string/app_name"
    android:textSize="36dp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtPessoaJuridica"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:fontFamily="serif"
    android:text="@string/txtPessoaJuridica"
    android:textColor="@color/colorAzul"
    android:textSize="24dp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtCNPJ"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:text="@string/txtCNPJ"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editCNPJ"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/txtHintCNPJ" />

  <TextView
    android:id="@+id/txtRazaoSocial"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/txtRazaoSocial"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editRazaoSocial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/txtHintRazaoSocial" />

  <TextView
    android:id="@+id/txtDataAberturaEmpresa"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/txtDataAberturaEmpresa"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editDataAberturaEmpresa"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="6"
    android:hint="@string/txtHintDataAberturaEmpresa"
    android:inputType="date" />

  <CheckBox
    android:id="@+id/ckSimplesNacional"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="16dp"
    android:onClick="simplesNacional"
    android:text="@string/txtSimplesNacional"
    android:textStyle="bold" />

  <CheckBox
    android:id="@+id/ckMEI"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="16dp"
    android:onClick="MEI"
    android:text="@string/txtMEI"
    android:textStyle="bold" />

  <Button
    android:id="@+id/btnSalvarConcluir"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:text="@string/btnSalvarConcluir" />

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="horizontal">

    <Button
      android:id="@+id/btnVoltar"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="4dp"
      android:layout_marginRight="8dp"
      android:layout_weight="1"
      android:text="@string/btnVoltar" />

    <Button
      android:id="@+id/btnCancelar"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="4dp"
      android:layout_weight="1"
      android:text="@string/btnCancelar" />

  </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
