<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".view.ClienteVipActivity">

  <TextView
    android:id="@+id/txtAppName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:text="@string/app_name"
    android:textSize="36dp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtNovoVip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:fontFamily="serif"
    android:text="@string/txtNovoVip"
    android:textColor="@color/colorAzul"
    android:textSize="24dp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtPrimeiroNome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/txtPrimeiroNome"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editPrimeiroNome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/txtHintNome" />

  <TextView
    android:id="@+id/txtSobrenome"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/txtSobrenome"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editSobrenome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/txtHintSobrenome" />

  <CheckBox
    android:id="@+id/ckPessoaFisica"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:onClick="pessoaFisica"
    android:text="@string/txtPessoaFisica"
    android:textStyle="bold" />

  <Button
    android:id="@+id/btnSalvarContinuar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/btnSalvarContinuar" />

  <Button
    android:id="@+id/btnCancelar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/btnCancelar" />


</androidx.appcompat.widget.LinearLayoutCompat>
