<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".view.LoginActivity">

  <TextView
    android:id="@+id/txtAppName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:text="@string/app_name"
    android:textSize="36sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:fontFamily="serif"
    android:text="@string/txtLogin"
    android:textColor="@color/colorAzul"
    android:textSize="24sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/textEmail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/txtEmail"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/txtHintEmail"
    android:inputType="textEmailAddress" />

  <TextView
    android:id="@+id/textSenhaA"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/txtSenhaA"
    android:textColor="@color/colorVerde"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editSenha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:ems="10"
    android:hint="@string/editSenhaA"
    android:inputType="numberPassword" />

  <androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <CheckBox
      android:id="@+id/ckLembrar"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_marginTop="5dp"
      android:layout_weight="1"
      android:layout_gravity="center_horizontal"
      android:onClick="lembrarSenha"
      android:text="@string/txtLembrar"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/txtRecuperarSenha"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_marginTop="5dp"
      android:padding="10dp"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:text="@string/txtRecuperarSenha"
      android:textColor="@color/colorVerde" />

  </androidx.appcompat.widget.LinearLayoutCompat>

  <androidx.appcompat.widget.LinearLayoutCompat
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true">

    <Button
      android:id="@+id/btnAcessar"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_marginTop="5dp"
      android:background="@drawable/custom_btn_b"
      android:layout_weight="1"
      android:layout_gravity="center_horizontal"
      android:text="@string/btnAcessar" />

    <Button
      android:id="@+id/btnSejaVip"
      android:layout_width="wrap_content"
      android:layout_height="60dp"
      android:layout_marginTop="5dp"
      android:layout_weight="1"
      android:background="@drawable/custom_btn_b"
      android:layout_gravity="center_horizontal"
      android:text="@string/btnSejaVip" />

  </androidx.appcompat.widget.LinearLayoutCompat>

  <TextView
    android:id="@+id/txtVersaoApp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="8dp"
    android:text="@string/txtVersaoApp"
    android:textColor="@color/colorVerde"
    android:textSize="14sp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/txtLerPolitica"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/txtTermosPolitica"
    android:textColor="@color/colorVerde"
    android:textSize="14sp"
    android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>
